--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
     <head>
         <title>Page Title</title>
+        <style>
+  body {
+   background-color: linen;
+        }
+
+  h1 {
+    color: maroon;
+    margin-left: 40px;
+     }
+       </style>
     </head>
     <body>
 
-        <h1 style="color:blue;">My First Heading</h1>
-        <p>My first paragraph.</p>
+        <h1>My First Heading</h1>
+        <p style="color:blue;">My first paragraph.</p>
 
     </body>
 </html> 
