--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </head>
     <body>
 
-        <h1>My First Heading</h1>
-        <p style="color:blue;">My first paragraph.</p>
+        <h1 style="color:blue;">My First Heading</h1>
+        <p>My first paragraph.</p>
 
     </body>
 </html> 
